{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "KeyboardControls",
            "id": "f81237cd-58bc-4e88-a2ca-8cbda39ce279",
            "actions": [
                {
                    "name": "LeftPaddle",
                    "type": "Button",
                    "id": "7abc6d19-220c-4efb-b1a6-bfc2119c3bc8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightPaddle",
                    "type": "Button",
                    "id": "e7175aa9-fb4a-40ba-ba2f-c20146f774af",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "syncPaddle",
                    "type": "Button",
                    "id": "a7928e69-84b3-483b-83c6-7fa06eeefeb6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "perfectPaddle",
                    "type": "Button",
                    "id": "b74eab32-ac23-45cc-b375-02d8a880dcb8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "543ce741-3dad-41fe-b29c-63c947ed082b",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftPaddle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dd15df98-0bfc-4a03-be26-25f67c90095d",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightPaddle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "46a54eb4-01d9-4564-8041-9f262302df9c",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "syncPaddle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "29599465-6089-403a-ad5b-8107118a219b",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "perfectPaddle",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "XRControls",
            "id": "bc69eef6-fdfd-49fd-9860-dc4ba9d6b2b1",
            "actions": [
                {
                    "name": "LeftPaddle",
                    "type": "Button",
                    "id": "52fa93df-755c-475c-978b-fd08b6a97d24",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightPaddle",
                    "type": "Button",
                    "id": "93039599-f833-420c-bd96-893974785428",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SyncPaddle",
                    "type": "Button",
                    "id": "0fd86f0b-51de-4ae0-9af6-e7768bb19e74",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c312c512-61ec-4e51-a18e-ba8a192f7940",
                    "path": "<XRController>{LeftHand}/{TriggerButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftPaddle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6d61acfa-af34-4f06-911f-8752b43f724a",
                    "path": "<XRController>{RightHand}/{TriggerButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightPaddle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "95695c4e-3075-43e5-9010-5fe33b78d074",
                    "path": "<XRController>{LeftHand}/{GripButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SyncPaddle",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}